feat(sms): delete endpoint
